change headers and fix spacing navbar

--- a/src/sass/global.scss
+++ b/src/sass/global.scss
@@ -12,9 +12,10 @@ h2 {
 }
 
 a {
-  color: $violet;
+  color: $black;
   font-weight: bold;
-  text-decoration: underline;
+  text-decoration: none;
+  background-image: $anchor-bg;
 }
 
 .portfolio {
@@ -36,6 +37,9 @@ a {
 }
 
 .header {
+  a {
+    background-image: none;
+  }
   font-family: "Archivo Narrow", "Arial", "Helvetica", "Segoe UI", "sans-serif";
   letter-spacing: 1px;
   text-transform: uppercase;
@@ -236,6 +240,9 @@ a {
   background-color: $black;
   padding: 2em;
   text-align: center;
+  a {
+    color: $gold;
+  }
   p {
     margin: 0;
   }
