--- a/src/sass/palette.scss
+++ b/src/sass/palette.scss
@@ -1,10 +1,11 @@
 //colors
 $gold: #dab662;
-$violet: #7c22b3;
+$violet: rgb(124, 34, 179);
 $gray: #6e7783;
 $white: #d8d8d8;
 $black: #333333;
 // $colorViolet: #873ab7;
+$anchor-bg: linear-gradient(180deg, transparent 70%, rgba(124, 34, 179, 0.7) 0);
 
 //spacing
 $padding-side: 2em;
